2004-07-16 Niklas Knutsson  <nq@altern.org>

	* Oops! operators does not include parenthesis
	* Use unicode operators in text printing
	* base == 10 -> base >= 2 && base <= 10 (in parsing)
	* Refine CSV export dialog
	* Sort out some getActive... vs get...
	* Fix too many arguments warning
	* Increase function parsing efficiency (decrease number of MathStructure copies)
	* Produce vector imediately on parse
	* Export button in variables dialog
	* Split number base expression and export csv dialogs from main.glade
	* Remove <requires lib="gnome"/> lines
	* Update Swedish translation
	* Update documentation
	* Fix nameTaken()
	* Fix overwriting variable
	* Remove deleted items from recent units/variables/functions
	* Do not try to insert deleted variable

2004-07-15 Niklas Knutsson  <nq@altern.org>

	* More work on base in parse options
	* Fix E in rpn mode
	* Parsing tweaking
	* GUI for number base in expression

2004-07-14 Niklas Knutsson  <nq@altern.org>

	* Alternative to round halfway integers to even (instead of upwards)
	* Make qalculate symlink from qalculate-gtk
	* Fix addColumns() and import of CSV file to matrix
	* Export to CSV file
	* if, function, error, warning, load, save and title functions were not activated (oops!)
	* Let argument definitions parse default values
	* Do not parse ! as factorial if functions is disabled
	* Ability to set number base for expression parsing
	* Allow full expressions in base functions

2004-07-13 Niklas Knutsson  <nq@altern.org>

	* Ability to set all number bases from 2 to 36 from GUI
	* Documentation updates
	* Alternative to use lower case letters in numbers
	* Fix double decimal point with integers
	* Fix decimal reduction rounding
	* Fix precision rounding
	* Fix approximate indication with multiple numbers
	* Fix printing of empty vector

2004-07-12 Niklas Knutsson  <nq@altern.org>

	* Update documentation
	* Force use of -O2 instead of -Os
	* Revert back to a^b^c = a^(b^z) (I don't remember changing it)